--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
