--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,10 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "components/graph-editor-backup.tsx",
+    "components/graph-editor-clean.tsx",
+    "components/ui/input-otp.tsx"
+  ]
 }
