--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "preelectron-pack": "npm run build",
     "dist": "npm run build && electron-builder --publish=never",
     "dist-all": "npm run build && electron-builder -mwl --publish=never",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "1.2.2",
@@ -52,7 +53,8 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "latest"
+    "zustand": "latest",
+    "@google/generative-ai": "^0.5.2"
   },
   "devDependencies": {
     "@types/node": "^22",
