--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build & export static site
-        run: |
-          npm run export
+      - name: Build static site
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
